# srptools

./: pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yaml
